# smart-finanza

./: .talismanrc  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Makefile  Readme.md  pyproject.toml
backend/src/: __init__.py  categorizer.py  constants.py  db.py  finance_tracker.py  llm.py  main.py  tracker.py
backend/src/dashboard/: README.md  __init__.py  backend.py  layout.py  query.py  tab_ai_analyst.py  tab_dashboard.py  tab_data_manager.py  tab_rules.py  tab_transactions_viewer.py
