[project]
name = "smart-finanza"
version = "0.1.0"
description = "A privacy-focused, AI-powered financial analysis tool that runs 100% locally. Uses Ollama (Qwen 2.5 / Llama 3) to extract structured data from PDF bank statements and CSV files, automatically categorizes transactions, and stores everything in a persistent SQLite vault."
readme = "Readme.md"
requires-python = ">=3.14"
dependencies = [
    "ollama",
    "pdfplumber",
    "pandas",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=100"

[tool.coverage.run]
omit = [
    "src/logger.py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]
